--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family:verdana,arial,sans-serif;
 	font-size:10.5pt;
     margin:30px;
-    line-height: 1.5em;
+    line-height: 20px;
     display: block;
     background-color: #fff;
 }
