Round of changes based on Moore feedback
- Redo of use case map
- Updated links to new NatCap website

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family:verdana,arial,sans-serif;
+    font-family:arial,sans-serif;
 	font-size:10.5pt;
     margin:30px;
     line-height: 20px;
