--- a/css/vizgallery.css
+++ b/css/vizgallery.css
@@ -1,7 +1,7 @@
 body {
     color: #333;
     font-size: 100%;
-    font-family: 'Monda', sans-serif;
+    font-family: 'Arial', sans-serif;
     padding: 0;
     margin: 0;
     padding-top: 2.5em;
